[gd_scene load_steps=33 format=3 uid="uid://2kaqp1f7ukyk"]

[ext_resource type="Script" path="res://scripts/gameplay_scripts/worded_to_fraction_gameplay.gd" id="1_5ccj4"]
[ext_resource type="Texture2D" uid="uid://duvm581upfn71" path="res://assets/floor_1/npc/Saisai Idle Long (2).png" id="2_0yrwa"]
[ext_resource type="Texture2D" uid="uid://f4a5kyl64epc" path="res://assets/ui/text box/speech_bubble.png" id="2_hqakt"]
[ext_resource type="Texture2D" uid="uid://v37nxstby7g0" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/board.png" id="2_nip83"]
[ext_resource type="Texture2D" uid="uid://brh6b8ufqdjks" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/board_box.png" id="3_cfd2g"]
[ext_resource type="FontFile" uid="uid://baqxnk61g1qva" path="res://assets/fonts/PixelOperator8.ttf" id="3_eelnt"]
[ext_resource type="Texture2D" uid="uid://dxwfqyv350leo" path="res://assets/floor_1/npc/Saisai Disappointed.png" id="3_h4416"]
[ext_resource type="Texture2D" uid="uid://cnupb6135utyu" path="res://assets/characters/old_mc/mc idle front.png" id="4_20jjk"]
[ext_resource type="FontFile" uid="uid://b7ifwnhbxq6y5" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_no8fb"]
[ext_resource type="Texture2D" uid="uid://kex21phpt41e" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/button_box.png" id="8_s1jky"]

[sub_resource type="Animation" id="Animation_yceuv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"wrong_answer"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../OldPeculiar:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../OldPeculiar:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_yjdxy"]
resource_name = "idle_old_peculiar"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../OldPeculiar:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../OldPeculiar:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2]
}

[sub_resource type="Animation" id="Animation_g1gs7"]
resource_name = "idle_saisai"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0]
}

[sub_resource type="Animation" id="Animation_3ufu4"]
resource_name = "spin_old_peculiar"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../OldPeculiar:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="Animation" id="Animation_gee6t"]
resource_name = "spin_saisai"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="Animation" id="Animation_k78ov"]
resource_name = "wrong_answer_saisai"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"wrong_answer"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xw6g"]
_data = {
"RESET": SubResource("Animation_yceuv"),
"idle_old_peculiar": SubResource("Animation_yjdxy"),
"idle_saisai": SubResource("Animation_g1gs7"),
"spin_old_peculiar": SubResource("Animation_3ufu4"),
"spin_saisai": SubResource("Animation_gee6t"),
"wrong_answer_saisai": SubResource("Animation_k78ov")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_red00"]
atlas = ExtResource("4_20jjk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_by4vq"]
atlas = ExtResource("4_20jjk")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mvpi"]
atlas = ExtResource("4_20jjk")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7fk2"]
atlas = ExtResource("4_20jjk")
region = Rect2(0, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_p2kin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_red00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by4vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mvpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7fk2")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_thli8"]
atlas = ExtResource("2_0yrwa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvabi"]
atlas = ExtResource("2_0yrwa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fixcj"]
atlas = ExtResource("2_0yrwa")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtewf"]
atlas = ExtResource("2_0yrwa")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04q12"]
atlas = ExtResource("2_0yrwa")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qroww"]
atlas = ExtResource("3_h4416")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl8aw"]
atlas = ExtResource("3_h4416")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qabt4"]
atlas = ExtResource("3_h4416")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw8kd"]
atlas = ExtResource("3_h4416")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xwprp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_thli8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvabi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fixcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtewf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04q12")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qroww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl8aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qabt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw8kd")
}],
"loop": true,
"name": &"wrong_answer",
"speed": 8.0
}]

[node name="WordedFractionGameplay" type="Control"]
layout_mode = 3
anchor_left = 0.067
anchor_right = 0.465
anchor_bottom = 0.403
offset_left = -68.608
offset_right = -476.16
offset_bottom = -232.128
size_flags_horizontal = 4
script = ExtResource("1_5ccj4")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(0.730216, 0.730216, 0.730216, 1)
layout_mode = 0
offset_right = 1023.0
offset_bottom = 577.0
color = Color(0.207843, 0.168627, 0.25098, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Saisai")
libraries = {
"": SubResource("AnimationLibrary_5xw6g")
}

[node name="question" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 44.0
offset_right = 748.0
offset_bottom = 158.0

[node name="NinePatchRect" type="NinePatchRect" parent="question"]
layout_mode = 2
texture = ExtResource("2_hqakt")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="question"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="question/MarginContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_fonts/font = ExtResource("3_eelnt")
text = "\"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...\""
horizontal_alignment = 1
autowrap_mode = 2

[node name="Raket" type="AnimatedSprite2D" parent="."]
position = Vector2(856, 120)
scale = Vector2(4.74023, 4.74023)

[node name="OldPeculiar" type="AnimatedSprite2D" parent="."]
position = Vector2(856, 120)
scale = Vector2(4.74023, 4.74023)
sprite_frames = SubResource("SpriteFrames_p2kin")
autoplay = "default"
frame = 1

[node name="Saisai" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(850, 126)
scale = Vector2(7.52344, 7.52344)
sprite_frames = SubResource("SpriteFrames_xwprp")
animation = &"wrong_answer"
autoplay = "wrong_answer"
frame = 1

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_top = 2.0
offset_right = 256.0
offset_bottom = 146.0
scale = Vector2(4, 4)
texture = ExtResource("2_nip83")

[node name="solution" type="HBoxContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 217.0
offset_top = 238.0
offset_right = 597.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 25

[node name="first_fraction" type="MarginContainer" parent="solution"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="solution/first_fraction"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="solution/first_fraction/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="solution/first_fraction/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_cfd2g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="FirstFractionNumerator" type="LineEdit" parent="solution/first_fraction/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_eelnt")
placeholder_text = "num"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="Label" type="Label" parent="solution/first_fraction/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_no8fb")
text = "-------"

[node name="MarginContainer2" type="MarginContainer" parent="solution/first_fraction/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="solution/first_fraction/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("3_cfd2g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="FirstFractionDenominator" type="LineEdit" parent="solution/first_fraction/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_eelnt")
placeholder_text = "denum"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="opperand" type="MarginContainer" parent="solution"]
layout_mode = 2

[node name="Label" type="Label" parent="solution/opperand"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_no8fb")
text = "+"

[node name="second_fraction" type="MarginContainer" parent="solution"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="solution/second_fraction"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="solution/second_fraction/VBoxContainer"]
layout_mode = 2

[node name="SecondFractionNumerator" type="LineEdit" parent="solution/second_fraction/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_eelnt")
placeholder_text = "num"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="solution/second_fraction/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_cfd2g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="solution/second_fraction/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_no8fb")
text = "-------"

[node name="MarginContainer2" type="MarginContainer" parent="solution/second_fraction/VBoxContainer"]
layout_mode = 2

[node name="SecondFractionDenominator" type="LineEdit" parent="solution/second_fraction/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_eelnt")
placeholder_text = "denum"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="solution/second_fraction/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("3_cfd2g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="equals" type="MarginContainer" parent="solution"]
layout_mode = 2

[node name="Label" type="Label" parent="solution/equals"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_no8fb")
text = "="

[node name="answer" type="MarginContainer" parent="solution"]
texture_filter = 1
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="solution/answer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="solution/answer/VBoxContainer"]
layout_mode = 2

[node name="NumeratorAnswer" type="LineEdit" parent="solution/answer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_eelnt")
placeholder_text = "num"
alignment = 1
max_length = 3
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="solution/answer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_cfd2g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="solution/answer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_no8fb")
text = "-------"

[node name="MarginContainer2" type="MarginContainer" parent="solution/answer/VBoxContainer"]
layout_mode = 2

[node name="DenominatorAnswer" type="LineEdit" parent="solution/answer/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_eelnt")
placeholder_text = "denum"
alignment = 1
max_length = 3
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="solution/answer/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("3_cfd2g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="submit" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 346.0
offset_top = 458.0
offset_right = 458.0
offset_bottom = 492.0
scale = Vector2(3, 3)

[node name="NinePatchRect" type="NinePatchRect" parent="submit"]
layout_mode = 2
texture = ExtResource("8_s1jky")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="submit"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="SubmitAnswer" type="Button" parent="."]
layout_mode = 2
offset_left = 463.0
offset_top = 501.0
offset_right = 565.0
offset_bottom = 525.0
theme_override_fonts/font = ExtResource("4_no8fb")
text = "SUBMIT"
flat = true

[node name="DisplayAnswer" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 86.0
offset_top = 374.0
offset_right = 936.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2

[node name="UserAnswer" type="Label" parent="DisplayAnswer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("4_no8fb")
text = "Display if answer is right or wrong."
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 881.0
offset_top = 495.0
offset_right = 985.0
offset_bottom = 535.0

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_no8fb")
text = "RETURN"
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_cfd2g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[connection signal="button_down" from="SubmitAnswer" to="." method="_on_submit_answer_button_down"]
[connection signal="button_down" from="MarginContainer/Button" to="." method="return_to_world"]
